//
//  OnBoardField.swift
//  Movie Time
//
//  Created by Arpit Singh on 30/01/23.
//

import Foundation
enum OnBoardField {
    case name
    case email
    case password
}
